--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -27,7 +27,7 @@
             var lat = document.getElementById("latitude").value;
             var lng = document.getElementById("longitude").value;
 
-            var url = 'http://api.aladhan.com/v1/qibla/' + lat + '/' + lng;
+            var url = 'https://api.aladhan.com/v1/qibla/' + lat + '/' + lng;
             fetch(url)
                 .then(response => response.json())
                 .then(data => {
@@ -36,57 +36,10 @@
         }
     </script>
 
-    <<<<<<<<<<<<<< ✨ Codeium Command ⭐>>>>>>>>>>>>>>>>
-        <h2>Qibla Direction on Google Map</h2>
-        <div id="map" style="width:800px;height:600px;"></div>
-        <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCyWggShoELr2-8JYuPV3UZaxwN8_NzcE&libraries=places"></script>
-        <script>
-            function initMap() {
-                var map = new google.maps.Map(document.getElementById('map'), {
-                    center: {
-                        lat: parseFloat(document.getElementById("latitude").value),
-                        lng: parseFloat(document.getElementById("longitude").value)
-                    },
-                    zoom: 8
-                });
-                var marker = new google.maps.Marker({
-                    position: {
-                        lat: parseFloat(document.getElementById("latitude").value),
-                        lng: parseFloat(document.getElementById("longitude").value)
-                    },
-                    map: map
-                });
-                var direction = document.getElementById("qibla-direction").innerHTML.split(":")[1].trim();
-                var directionRad = Math.PI * direction / 180;
-                var latitudeRad = Math.PI * parseFloat(document.getElementById("latitude").value) / 180;
-                var longitudeRad = Math.PI * parseFloat(document.getElementById("longitude").value) / 180;
-                var y = Math.sin(directionRad) * Math.cos(latitudeRad);
-                var x = Math.cos(directionRad) * Math.sin(longitudeRad);
-                var qiblaLatLong = {
-                    lat: Math.asin(Math.sin(latitudeRad) * Math.cos(directionRad) / Math.sqrt(1 + Math.pow(y, 2))),
-                    lng: longitudeRad + Math.atan2(x, Math.sqrt(1 + Math.pow(y, 2)))
-                };
-                var qiblaMarker = new google.maps.Marker({
-                    position: qiblaLatLong,
-                    map: map
-                });
-                var directionLine = new google.maps.Polyline({
-                    path: [
-                        marker.position,
-                        qiblaMarker.position
-                    ],
-                    geodesic: true,
-                    strokeColor: '#000000',
-                    strokeOpacity: 1.0,
-                    strokeWeight: 2
-                });
-                directionLine.setMap(map);
-            }
-            google.maps.event.addDomListener(window, 'load', initMap);
-        </script>
 
-        <<<<<<< 6e601bc1-e94c-4468-83d2-2f8668337f43>>>>>>>
+    <h2>Qibla Direction on Google Map</h2>
+
+
 
 </body>
 
