Change type num to text

--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -14,9 +14,9 @@
 
     <form>
         <label for="latitude">Latitude:</label><br>
-        <input type="number" id="latitude" name="latitude"><br>
+        <input type="text" id="latitude" name="latitude"><br>
         <label for="longitude">Longitude:</label><br>
-        <input type="number" id="longitude" name="longitude"><br>
+        <input type="text" id="longitude" name="longitude"><br>
         <button type="submit" onclick="getQiblaDirection()">Get Qibla Direction</button>
     </form>
 
