Use event.preventDefault(); to prevent page from refreshing

--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -24,6 +24,8 @@
 
     <script>
         function getQiblaDirection() {
+
+event.preventDefault();
             var lat = document.getElementById("latitude").value;
             var lng = document.getElementById("longitude").value;
 
