--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -9,10 +9,9 @@
 
 <body>
 
-    <script src="QiblaFinder.js"></script>
     <h1>Qiblat Finder</h1>
 
-    <button>Find Your Location</button>
+    <button class="findCoords">Find Your Location</button>
 
 
     <h2>Insert Your Coordinate </h2>
@@ -24,8 +23,26 @@
         <button type="submit" onclick="getQiblaDirection()">Get Qibla Direction</button>
     </form>
 
-    <p id="qibla-direction"></p>
+    <h4 class="status"></h4>
 
+    <p id="qibla-direction"></p>
+    <script src="js/QiblaFinder.js"></script>
+
+    <script>
+        function getQiblaDirection() {
+
+            event.preventDefault();
+            var lat = document.getElementById("latitude").value;
+            var lng = document.getElementById("longitude").value;
+
+            var url = 'https://api.aladhan.com/v1/qibla/' + lat + '/' + lng;
+            fetch(url)
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById("qibla-direction").innerHTML = "Qibla direction: " + data.data.direction;
+                });
+        }
+    </script>
 
 
     <h2>Qibla Direction on Google Map</h2>
