--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -16,10 +16,10 @@
 
     <h2>Insert Your Coordinate </h2>
     <form>
-        <label for="latitude">Latitude:</label><br>
+        <!-- <label for="latitude">Latitude:</label><br>
         <input type="text" id="latitude" name="latitude"><br>
         <label for="longitude">Longitude:</label><br>
-        <input type="text" id="longitude" name="longitude"><br>
+        <input type="text" id="longitude" name="longitude"><br> -->
         <button type="submit" onclick="getQiblaDirectionAuto()">Get Qibla Direction</button>
     </form>
 
@@ -30,23 +30,7 @@
     <p id="qibla-direction"></p>
     <script src="js/QiblaFinder.js"></script>
 
-    <!-- <script>
-        function getQiblaDirection() {
 
-
-            event.preventDefault();
-            var lat = document.getElementById("latitude").value;
-            var lng = document.getElementById("longitude").value;
-
-            var url = 'https://api.aladhan.com/v1/qibla/' + lat + '/' + lng;
-            fetch(url)
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById("qibla-direction").innerHTML = "Qibla direction: " + data.data.direction;
-                  
-                });
-        }
-    </script> -->
 
 
     <h2>Qibla Direction on Google Map</h2>
