add prayer time to index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <body>
     <a href="QiblaFinder.html">Qibla Finder</a>
+    <br>
     <a href="Hadith.html">Hadith</a>
+    <br>
+    <a href="prayerTime.html">Prayer Time</a>
 </body>
 
 </html>
