qibla finder jadii

--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -20,7 +20,7 @@
         <input type="text" id="latitude" name="latitude"><br>
         <label for="longitude">Longitude:</label><br>
         <input type="text" id="longitude" name="longitude"><br> -->
-        <button type="submit" onclick="getQiblaDirectionAuto()">Get Qibla Direction</button>
+        <button type="submit" onclick="findAndBearing()">Get Qibla Direction</button>
     </form>
 
 
