--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -10,18 +10,20 @@
 <body>
 
     <h1>Qiblat Finder</h1>
+    <button type="submit" onclick="getQiblaDirectionAuto()">Get Qibla Direction</button>
 
-    <button class="findCoords" onclick="getLatitude() , getLongitude()">Find Your Location</button>
 
-
+    <div class="insertCoords">
+        <form>
+            <label for="latitude">Latitude:</label><br>
+            <input type="text" id="latitude" name="latitude"><br>
+            <label for="longitude">Longitude:</label><br>
+            <input type="text" id="longitude" name="longitude"><br>
+            <button type="submit" onclick="getQiblaDirectionManually()">Get Qibla Direction</button>
+        </form>
+    </div>
     <h2>Insert Your Coordinate </h2>
-    <form>
-        <!-- <label for="latitude">Latitude:</label><br>
-        <input type="text" id="latitude" name="latitude"><br>
-        <label for="longitude">Longitude:</label><br>
-        <input type="text" id="longitude" name="longitude"><br> -->
-        <button type="submit" onclick="findAndBearing()">Get Qibla Direction</button>
-    </form>
+
 
 
     <h4 class="latitude"></h4>
