--- a/prayForm.html
+++ b/prayForm.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>Prayer Times</h1>
-    <form id="location-form" ">
+    <form id="location-form" >
         <label for="location">Select your location:</label>
         <select id="location" >
             <option value="JHR01">Pulau Aur dan Pulau Pemanggil</option>
