correct file address

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <a href="Hadith.html">Hadith</a>
     <br>
     <a href="prayerTime.html">Prayer Time</a>
+    <br>
+    <a href="masjidLocator.html">Masjid Locator</a>
 </body>
 
 </html>
