--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -9,7 +9,7 @@
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzYlo7cul2YLTHD3hc0sextk-mixpOElU&libraries=places&callback=initMap"
         async defer></script>
-    <script src="masjidLocator.js"></script>
+    <script src="js/masjidLocator.js"></script>
 </head>
 
 <body>
