--- a/Hadith.html
+++ b/Hadith.html
@@ -1,107 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Hadith</title>
-        <link rel="stylesheet" href="hadith.css"/>
-    </head>
-    <body>
-        <div class="content">
-            <div class="top-content">
-                <div class="left-top">
-                    <h1>Hadith:<span id="hadith-book"></span></h1><!-- Will Put some hadith name -->
-                </div>
-                <div class="right-top">
-                    <h1><span id="time"></span></h1>
-                    <script src="js/time.js"></script>
-                </div>    
-            </div>
-            <div class="middle-content">
-                <hr>
-            </div>
-            <div class="bottom-content">
-                <div class="bottom-left">
-                    <div class="bottom-left-top">
-                        <form method="post" onsubmit="return lang()">
-                            <h3>Translation Language</h3>
-                            <input type="radio" name="lang" id="lang" value="urdu">
-                            <label for="lang1">Urdu</label><br/>
-                            <input type="radio" name="lang" id="lang" value="bangladesh">
-                            <label for="lang2">Malay</label><br/>
-                            <input type="radio" name="lang" id="lang" value="english">
-                            <label for="lang3">English</label><br/><br/>
-                            <div class="SubCan-button">
-                                <input type="submit" value="Change"><!-- comment -->
-                                <input type="reset" value="Cancel">
-                            </div>
-                        </form>
 
-                    </div>
-                    <div class="bottom-left-bottom">
-                        <h3>Hadith Details</h3>
-                        <p>References                       : Sahih al-Bukhari 2</p>
-                        <p>In-book references               : Book 1, Hadith 2</p>
-                        <p>USC-MSA web (English) reference  : Vol. 1, Book 1, Hadith 2</p>
-                    </div>
-                </div>
-                <div class="bottom-right">
-                    <div class="bottom-right-left">
-                        <h3>Translated</h3>
-                        <h5>Narrate' Aisha:</h5>
-                        <p>(the mother of the faithful believers) Al-Harith bin 
-                            Hisham asked Allah's Messenger (ﷺ) "O Allah's Messenger 
-                            (ﷺ)! How is the Divine Inspiration revealed to you?" 
-                            Allah's Messenger (ﷺ) replied, "Sometimes it is (revealed) 
-                            like the ringing of a bell, this form of Inspiration is 
-                            the hardest of all and then this state passes off after 
-                            I have grasped what is inspired. Sometimes the Angel comes 
-                            in the form of a man and talks to me and I grasp whatever 
-                            he says." 'Aisha added: Verily I saw the Prophet (ﷺ) being 
-                            inspired divinely on a very cold day and noticed the sweat 
-                            dropping from his forehead (as the Inspiration was over)
-                        </p>
-                    </div>
-                    <div class="vertical-line">
-                        <hr>
-                    </div>
-                    <div class="bottom-right-right">
-                        <p><span dir="rtl">حَدَّثَنَا عَبْدُ اللَّهِ بْنُ يُوسُفَ، قَالَ أَخْبَرَنَا مَالِكٌ، عَنْ هِشَامِ بْنِ عُرْوَةَ، عَنْ أَبِيهِ، عَنْ عَائِشَةَ أُمِّ الْمُؤْمِنِينَ ـ رضى الله عنها ـ أَنَّ الْحَارِثَ بْنَ هِشَامٍ ـ رضى الله عنه ـ سَأَلَ رَسُولَ اللَّهِ صلى الله عليه وسلم فَقَالَ يَا رَسُولَ اللَّهِ كَيْفَ يَأْتِيكَ الْوَحْىُ فَقَالَ رَسُولُ اللَّهِ صلى الله عليه وسلم ‏ "‏ أَحْيَانًا يَأْتِينِي مِثْلَ صَلْصَلَةِ الْجَرَسِ ـ وَهُوَ أَشَدُّهُ عَلَىَّ ـ فَيُفْصَمُ عَنِّي وَقَدْ وَعَيْتُ عَنْهُ مَا قَالَ، وَأَحْيَانًا يَتَمَثَّلُ لِيَ الْمَلَكُ رَجُلاً فَيُكَلِّمُنِي فَأَعِي مَا يَقُولُ ‏"‏‏.‏ قَالَتْ عَائِشَةُ رضى الله عنها وَلَقَدْ رَأَيْتُهُ يَنْزِلُ عَلَيْهِ الْوَحْىُ فِي الْيَوْمِ الشَّدِيدِ الْبَرْدِ، فَيَفْصِمُ عَنْهُ وَإِنَّ جَبِينَهُ لَيَتَفَصَّدُ عَرَقًا‏.‏
-                            </span></p>
-                    </div>
-                </div>
-            </div>       
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Hadith</title>
+    <link rel="stylesheet" href="hadith.css" />
+    <link rel="stylesheet" href="time-contnt.css">
+</head>
+
+<body>
+    <div class="content">
+        <div class="top-content">
+            <div class="left-top">
+                <h1>Hadith:<span id="hadith-book-name"></span></h1><!-- Will Put some hadith name -->
+            </div>
+            <div class="right-top">
+                <h1><span id="time"></span></h1>
+                <script src="js/time.js"></script>
+            </div>
         </div>
-<script>
-    const apiUrlBook = 'https://hadithapi.com/api/books?apiKey=$2y$10$b7iVORLvYlYxA4SrjrPGu9OVCA7C6TaOYwxaltQTFfApmMai';
-fetch(apiUrlBook)
-.then(response => response.json())
-.then(data => {
-    console.log(data);
-    document.getElementById("hadith-book").innerHTML=""+data.chapters.bookSlug;
-})
-.catch(error => {
-    console.log(error);
-})
-    const apiUrlChapter = 'https://hadithapi.com/api/sahih-bukhari/chapters?apiKey=$2y$10$b7iVORLvYlYxA4SrjrPGu9OVCA7C6TaOYwxaltQTFfApmMai';
-fetch(apiUrlChapter)
-.then(response => response.json())
-.then(data => {
-    console.log(data);
-})
-.catch(error => {
-    console.log(error);
-})
+        <div class="middle-content">
+            <hr>
+        </div>
 
-const apiUrlHadith = 'https://hadithapi.com/api/hadiths?apiKey=$2y$10$b7iVORLvYlYxA4SrjrPGu9OVCA7C6TaOYwxaltQTFfApmMai';
-fetch(apiUrlHadith)
-.then(response => response.json())
-.then(data => {
-    console.log(data);
-})
-.catch(error => {
-    console.log(error);
-})
-</script>
 
-    </body>
+        <div class="bottom-content">
+            <div class="details">
+                <div id="hadith-content"></div>
+                <h4>Hadith Details</h4>
+                <p id="hadith-writer"></p>
+                <p id="hadith-chapter-number"></p>
+                <p id="hadith-chapter-english"></p>
+                <p id="hadith-chapter-arabic"></p>
+                <p id="hadith-chapter-urdu"></p>
+            </div>
+            <div class="hadith-translate">
+                <table>
+                    <tr>
+                        <th>Narated by</th>
+                        <th>English</th>
+                        <th>Arabic</th>
+                        <th>Urdu</th>
+                    </tr>
+                    <tr>
+                        <td><p id="hadith-narrator"></p></td>
+                        <td><p id="hadith-english"></p></td>
+                        <td><p id="hadith-arabic"></p></td>
+                        <td><p id="hadith-urdu"></p></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+    </div>
+    <script src="hadith.js"></script>
+
+</body>
+
 </html>
