change hadith to hadith finder

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <a href="QiblaFinder.html">Qibla Finder</a>
     <br>
-    <a href="Hadith.html">Hadith</a>
+    <a href="HadithFinder.html">Hadith</a>
     <br>
     <a href="prayerTime.html">Prayer Time</a>
     <br>
