--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <br>
     <a href="HadithFinder.html">Hadith</a>
     <br>
-    <a href="prayerTime.html">Prayer Time</a>
+    <a href="prayerTime.html">Local Prayer Time</a>
     <br>
     <a href="masjidLocator.html">Masjid Locator</a>
 </body>
