--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -25,16 +25,9 @@
                 <h4>Qibla Direction :</h4>
                 <p id="qibla-direction"></p>
             </div>
-            <!-- <div class="insertCoords">
-        <form>
-          <label for="latitude">Latitude:</label><br>
-          <input type="text" id="latitude" name="latitude"><br>
-          <label for="longitude">Longitude:</label><br>
-          <input type="text" id="longitude" name="longitude"><br>
-          <button type="submit" onclick="getQiblaDirectionManually()">Get Qibla Direction</button>
-        </form>
-      </div>
-      <h2>Insert Your Coordinate </h2> -->
+            <div class="compassContainer">
+                <img id="compass" src="compass.png" alt="Compass" style="width: 100px;">
+            </div>
             <script src="js/QiblaFinder.js"></script>
         </div>
         <div class="bottomContent">
