--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1>Masjid Locator - Prototype Version 1 by @fariddin_</h1>
+        <h1>Masjid Locator - Prototype Version 1 by fariddin_</h1>
     </header>
     <div class="container">
         <div class="search-bar">
