--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -5,27 +5,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="qfStyle.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="time-contnt.css">
+    <link rel="stylesheet" href="header.css">
+
     <title>Qiblat Finder</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="topContent">
-            <div class="urLocation">
-                <h4>Current Location</h4>
-                <h4 class="latitude"></h4>
-                <h4 class="longitude"></h4>
-                <h4 class="errorMessage"></h4>
+    <header>
+        <div class="logo">
+            <a href="#">
+                <img class="logoStyle" src="images/logo2.png" />
+            </a>
+        </div>
+
+        <nav class="navbar">
+            <a href="QiblaFinder.html">QIBLA FINDER</a>
+            <a href="masjidLocator.html">MASJID LOCATOR</a>
+            <a href="prayerTime.html">PRAY TIME</a>
+            <a href="hadithFinderBaru.html">HADITH</a>
+        </nav>
+    </header>
+    <div class="content">
+        <div class="top-content">
+            <div class="left-top">
+                <h1>Qiblat Finder</h1>
             </div>
-            <div class="buttonGetLocation">
-                <button type="submit" onclick="getQiblaDirectionAuto()" id="GetQiblaAutoButton">Get Qiblat
-                    Direction</button>
+
+            <div class="right-top">
+                <h1><span id="time"></span></h1>
+                <script src="js/time.js"></script>
             </div>
-            <div class="qiblaInfo">
-                <h4>Qibla Direction :</h4>
-                <p id="qibla-direction"></p>
-            </div>
-            <!-- <div class="insertCoords">
+        </div>
+        <hr>
+
+
+
+        <div class="container">
+            <div class="topContent">
+                <div class="urLocation">
+                    <h4>Current Location</h4>
+                    <h4 class="latitude"></h4>
+                    <h4 class="longitude"></h4>
+                    <h4 class="errorMessage"></h4>
+                </div>
+                <div class="buttonGetLocation">
+                    <button type="submit" onclick="getQiblaDirectionAuto()" id="GetQiblaAutoButton">Get Qiblat
+                        Direction</button>
+                </div>
+                <div class="qiblaInfo">
+                    <h4>Qibla Direction :</h4>
+                    <p id="qibla-direction"></p>
+                </div>
+                <!-- <div class="insertCoords">
         <form>
           <label for="latitude">Latitude:</label><br>
           <input type="text" id="latitude" name="latitude"><br>
@@ -35,14 +68,14 @@
         </form>
       </div>
       <h2>Insert Your Coordinate </h2> -->
-            <script src="js/QiblaFinder.js"></script>
+                <script src="js/QiblaFinder.js"></script>
+            </div>
+            <div class="bottomContent">
+                <div id="map" style="height: 400px; width: 100%;"></div>
+                <script async defer
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzYlo7cul2YLTHD3hc0sextk-mixpOElU&callback=initMap"></script>
+            </div>
         </div>
-        <div class="bottomContent">
-            <div id="map" style="height: 400px; width: 100%;"></div>
-            <script async defer
-                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzYlo7cul2YLTHD3hc0sextk-mixpOElU&callback=initMap"></script>
-        </div>
-    </div>
 </body>
 
 </html>
