--- a/prayerTime.html
+++ b/prayerTime.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="prayerTime.css">
+    
     <title>Prayer Time</title>
 </head>
 
 <body>
-    <div class="content">
+   <script src="js/time.js"></script>
         <div class="top">
             <div class="left">
                 <h1>Prayer Time</h1>
@@ -19,7 +20,7 @@
                 <script src="js/time.js"></script>
             </div>
         </div>
-    </div>
+    
     <div class="schedule">
         <form id="prayerForm" method="post">
             <input type="text" id="city" placeholder="Enter your city">
