--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find Nearby Mosque</title>
-    <link rel="stylesheet" href="masjidLocator.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="masjidLocator.css" />
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzYlo7cul2YLTHD3hc0sextk-mixpOElU&libraries=places&callback=initMap"
-        async defer></script>
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzYlo7cul2YLTHD3hc0sextk-mixpOElU&libraries=places&callback=initMap"
+      async
+      defer
+    ></script>
     <script src="js/masjidLocator.js"></script>
-</head>
+    <link  rel="stylesheet" href="time-contnt.css">
+  </head>
 
-<body>
-    <header>
-        <h1>Masjid Locator - Prototype Version 1 by fariddin_</h1>
+  <body>
+    <header style="margin-bottom:0.5%">
+      <div class="logo">
+        <a href="#">
+          <img class="logoStyle" src="images/logo2.png" />
+        </a>
+      </div>
+
+      <nav class="navbar">
+        <a href="QiblaFinder.html">QIBLA FINDER</a>
+        <a href="masjidLocator.html">MOSQUE LOCATOR</a>
+        <a href="prayerTime.html">PRAY TIME</a>
+        <a href="hadithFinderBaru.html">HADITH</a>
+      </nav>
     </header>
-    <div class="container">
-        <div class="search-bar">
-            <input type="text" placeholder="Enter your location..." id="search" />
-            <button id="searchButton">Search</button>
-        </div>
-        <div id="map"></div>
-        <table id="mosqueTable">
-            <tbody></tbody>
-        </table>
-    </div>
-</body>
 
+
+
+    <div class="top-content">
+      <div class="left-top">
+        <h1>Mosque Locator</h1>
+      </div>
+      <div class="right-top1">
+        <h1><span id="time"></span></h1>
+        <script src="js/time.js"></script>
+      </div>
+    </div>
+    <div class="middle-content">
+      <hr style="margin-top:0.7%;margin-bottom:1%;"/>
+    </div>
+
+
+  
+
+    <div class="containers">
+      <div class="search-bar">
+        <input type="text" placeholder="Enter your location..." id="search" />
+        <button id="searchButton">Search</button>
+      </div>
+      <div id="map"></div>
+      <table id="mosqueTable">
+        <tbody></tbody>
+      </table>
+    </div>
+  </body>
 </html>
