nnt isambung sebb din suh pull

--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -55,8 +55,8 @@
                         Direction</button>
                 </div>
                 <div class="qiblaInfo">
-                    <h4>Qibla Direction :</h4>
-                    <p id="qibla-direction"></p>
+                    <h4 style="display: inline;">Qibla Direction :</h4>
+                    <p id="qibla-direction" style="display: inline; font-weight: 800;"></p>
                 </div>
                 <!-- <div class="insertCoords">
         <form>
