--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -19,7 +19,7 @@
     <header style="margin-bottom:0.5%">
       <div class="logo">
         <a href="#">
-          <img class="logoStyle" src="images/logo2.png" />
+          <img class="logoStyle" src="images/logo2new.png" />
         </a>
       </div>
 
@@ -45,9 +45,6 @@
     <div class="middle-content">
       <hr style="margin-top:0.7%;margin-bottom:1%;"/>
     </div>
-
-
-  
 
     <div class="containers">
       <div class="search-bar">
