--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="homepage.css">
+    <title>Muslim Guider</title>
 </head>
 
 <body>
-    <a href="QiblaFinder.html">Qibla Finder</a>
-    <br>
-    <a href="HadithFinderBaru.html">Hadith</a>
-    <br>
-    <a href="prayerTime.html">Local Prayer Time</a>
-    <br>
-    <a href="masjidLocator.html">Masjid Locator</a>
+    <section class="content">
+        <div class="title">
+            <h1>Muslim Guider</h1>
+            <p>“Maka janganlah kamu merasa lemah dan janganlah kamu berputus asa, padahal kamulah orang yang lebih
+                tinggi kedudukannya jika kamu orang yang beriman.” [Surah Ali Imran: 139] </p>
+        </div>
+
+        <div class="direc">
+            <a href="prayerTime.html" class="button">Prayer Time</a>
+            <a href="Hadith.html" class="button">Hadith</a>
+            <a href="Masjid.html" class="button">Masjid</a>
+            <a href="QiblaFinder.html" class="button">Qibla Finder</a>
+        </div>
+    </section>
 </body>
 
 </html>
