--- a/homepage.html
+++ b/homepage.html
@@ -5,23 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="header.css">
     <title>Muslim Guider</title>
 </head>
 
 <body>
-    <section class="content">
-        <div class="title">
-            <h1>Muslim Guider</h1>
-            <p>“Maka janganlah kamu merasa lemah dan janganlah kamu berputus asa, padahal kamulah orang yang lebih tinggi kedudukannya jika kamu orang yang beriman.” [Surah Ali Imran: 139] </p>
+    <header>
+        <div class="logo">
+            <a href="#">
+                <img class="logoStyle" src="images/logo2new.png" />
+            </a>  
         </div>
 
-        <div class="direc">
-            <a href="prayerTime.html" class="button">Prayer Time</a>
-            <a href="Hadith.html" class="button">Hadith</a>
-            <a href="Masjid.html" class="button">Masjid</a>
-            <a href="QiblaFinder.html" class="button">Qibla Finder</a>
+        <nav class="navbar">
+            <a href="QiblaFinder.html">QIBLA FINDER</a>
+            <a href="masjidLocator.html">MASJID LOCATOR</a>
+            <a href="prayerTime.html">PRAY TIME</a>
+            <a href="hadithFinderBaru.html">HADITH</a>
+        </nav>
+    </header>
+    <section class="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/slide1.jpg" alt="Background 1">
+            </div>
+            <div class="carousel-item">
+                <img src="images/slide2.jpeg" alt="Background 2">
+            </div>
+            <div class="carousel-item">
+                <img src="images/slide3.jpeg" alt="Background 3">
+            </div>
         </div>
     </section>
+    <section class="content">
+        <div class="title">
+            <h1>Welcome to Muslim Guider</h1>
+            <p>“Maka janganlah kamu merasa lemah dan janganlah kamu berputus asa, padahal kamulah orang yang lebih tinggi kedudukannya jika kamu orang yang beriman.” [Surah Ali Imran: 139] </p>
+        </div>
+    </section>
+    <script src="carousel.js"></script>
 </body>
 
 </html>
