--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -18,7 +18,7 @@
   <body>
     <header style="margin-bottom:0.5%">
       <div class="logo">
-        <a href="#">
+        <a href="Homepage.html">
           <img class="logoStyle" src="images/logo2new.png" />
         </a>
       </div>
@@ -48,8 +48,8 @@
 
     <div class="containers">
       <div class="search-bar">
-        <input type="text" placeholder="Enter your location..." id="search" />
-        <button id="searchButton">Search</button>
+        <input type="text" placeholder="Enter your location..." id="search" class="searchInput" />
+        <button id="searchButton" class="searchbtn">Search</button>
       </div>
       <div id="map"></div>
       <table id="mosqueTable">
