--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -16,7 +16,8 @@
     <header>
         <div class="logo">
             <a href="#">
-                <img class="logoStyle" src="images/logo2.png" />
+                <img class="logoStyle" src="images/logo2new.png" />
+
             </a>
         </div>
 
@@ -45,9 +46,11 @@
         <div class="container">
             <div class="topContent">
                 <div class="urLocation">
-                    <h4>Current Location</h4>
+                    <h4>Current Location : </h4>
+                    <br>
                     <h4 class="latitude"></h4>
                     <h4 class="longitude"></h4>
+                    <p id="city"></p>
                     <h4 class="errorMessage"></h4>
                 </div>
                 <div class="buttonGetLocation">
@@ -56,7 +59,10 @@
                 </div>
                 <div class="qiblaInfo">
                     <h4 style="display: inline;">Qibla Direction :</h4>
-                    <p id="qibla-direction" style="display: inline; font-weight: 800;"></p>
+                    <p id="qibla-direction" style=" font-weight: 800;"></p>
+                    <br>
+                    <h4 style="display: inline;">Kaabah Distance :</h4>
+                    <p id="qibla-distance" style=" font-weight: 800;"></p>
                 </div>
                 <!-- <div class="insertCoords">
         <form>
