--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find Nearby Mosque</title>
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="masjidLocator.css" />
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzYlo7cul2YLTHD3hc0sextk-mixpOElU&libraries=places&callback=initMap"
@@ -12,11 +12,17 @@
       defer
     ></script>
     <script src="js/masjidLocator.js"></script>
-    <link  rel="stylesheet" href="time-contnt.css">
+    <link rel="stylesheet" href="time-contnt.css" />
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    /> -->
   </head>
 
   <body>
-    <header style="margin-bottom:0.5%">
+    <header style="margin-bottom: 0.5%">
       <div class="logo">
         <a href="Homepage.html">
           <img class="logoStyle" src="images/logo2new.png" />
@@ -31,8 +37,6 @@
       </nav>
     </header>
 
-
-
     <div class="top-content">
       <div class="left-top">
         <h1>Mosque Locator</h1>
@@ -43,12 +47,17 @@
       </div>
     </div>
     <div class="middle-content">
-      <hr style="margin-top:0.7%;margin-bottom:1%;"/>
+      <hr style="margin-top: 0.7%; margin-bottom: 1%" />
     </div>
 
     <div class="containers">
       <div class="search-bar">
-        <input type="text" placeholder="Enter your location..." id="search" class="searchInput" />
+        <input
+          type="text"
+          placeholder="Enter your location..."
+          id="search"
+          class="searchInput"
+        />
         <button id="searchButton" class="searchbtn">Search</button>
       </div>
       <div id="map"></div>
@@ -56,5 +65,107 @@
         <tbody></tbody>
       </table>
     </div>
+
+    <footer class="text-center text-lg-start bg-body-tertiary text-muted">
+      <!-- Section: Social media -->
+      <section
+        class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+      >
+        <!-- Left -->
+        <!-- <div class="me-5 d-none d-lg-block" style="background-color: #ccc;color:black">
+          <span
+            >Embrace the digital tapestry of our online presence join and us
+            across social realms :
+          </span>
+        </div> -->
+        <!-- Left -->
+
+        <!-- Right -->
+      </section>
+      <!-- Section: Social media -->
+
+      <!-- Section: Links  -->
+      <section
+        class="foot"
+        style="background-color: #4f6f52; color: white; padding-top: 1vw"
+      >
+        <div class="container text-center text-md-start mt-5">
+          <!-- Grid row -->
+          <div class="row mt-3">
+            <!-- Grid column -->
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+              <!-- Content -->
+              <h6 class="text-uppercase fw-bold mb-4">
+                <i class="fas fa-gem me-3"></i>Muslim Guider
+              </h6>
+              <p>
+                "Welcome to Muslim Guider, your go-to app for all things
+                Islamic. Here, you'll find Hadiths, which are wise sayings from
+                the Prophet Muhammad, prayers times to help you stay on track, a
+                map to locate nearby mosques, and a tool to point you in the
+                right direction for prayer."
+              </p>
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+              <!-- Links -->
+              <h6 class="text-uppercase fw-bold mb-4">Function</h6>
+              <p>
+                <a href="#!" class="text-reset">Qibla Finder</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Mosque Locator</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Prayer Time</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Hadith</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">About Us</a>
+              </p>
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+              <!-- Links -->
+              <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+              <p>
+                <i class="fas fa-envelope me-3"></i>
+                MuslimGuider@gmail.com
+              </p>
+              <p>
+                <i class="fas fa-phone me-3"></i> +60134143356 - Farid Izzuddin
+              </p>
+              <p>
+                <i class="fas fa-print me-3"></i> +60179841826 - Tuan Firdaus
+              </p>
+              <p>
+                <i class="fas fa-print me-3"></i> +60192829278 - Imran Bahar
+              </p>
+            </div>
+            <!-- Grid column -->
+          </div>
+          <!-- Grid row -->
+        </div>
+      </section>
+      <!-- Section: Links  -->
+
+      <!-- Copyright -->
+      <div
+        class="text-center p-4"
+        style="background-color: #1a4d2e; color: white"
+      >
+        © 2024 -
+        <a class="text-reset fw-bold" href="https://mdbootstrap.com/"
+          >Muslim Guider Co.</a
+        >
+      </div>
+      <!-- Copyright -->
+    </footer>
   </body>
 </html>
