--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo">
             <a href="#">
                 <img class="logoStyle" src="images/logo2new.png" />
-            </a>  
+            </a>
         </div>
 
         <nav class="navbar">
@@ -40,7 +40,8 @@
     <section class="content">
         <div class="title">
             <h1>Welcome to Muslim Guider</h1>
-            <p>“Maka janganlah kamu merasa lemah dan janganlah kamu berputus asa, padahal kamulah orang yang lebih tinggi kedudukannya jika kamu orang yang beriman.” [Surah Ali Imran: 139] </p>
+            <p>“Maka janganlah kamu merasa lemah dan janganlah kamu berputus asa, padahal kamulah orang yang lebih
+                tinggi kedudukannya jika kamu orang yang beriman.” [Surah Ali Imran: 139] </p>
         </div>
     </section>
     <script src="carousel.js"></script>
