--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find Nearby Mosque</title>
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous"
+  />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="masjidLocator.css" />
     <script
@@ -13,12 +19,7 @@
     ></script>
     <script src="js/masjidLocator.js"></script>
     <link rel="stylesheet" href="time-contnt.css" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    /> -->
+   
   </head>
 
   <body>
@@ -66,24 +67,8 @@
       </table>
     </div>
 
+    <!-- Footer -->
     <footer class="text-center text-lg-start bg-body-tertiary text-muted">
-      <!-- Section: Social media -->
-      <section
-        class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
-      >
-        <!-- Left -->
-        <!-- <div class="me-5 d-none d-lg-block" style="background-color: #ccc;color:black">
-          <span
-            >Embrace the digital tapestry of our online presence join and us
-            across social realms :
-          </span>
-        </div> -->
-        <!-- Left -->
-
-        <!-- Right -->
-      </section>
-      <!-- Section: Social media -->
-
       <!-- Section: Links  -->
       <section
         class="foot"
@@ -167,5 +152,6 @@
       </div>
       <!-- Copyright -->
     </footer>
+    <!-- Footer -->
   </body>
 </html>
