--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -64,7 +64,9 @@
     <section class="footer">
       <div class="footer-row">
         <div class="footer-col">
-          <h3>Muslim Guider</h3>
+          <div class="logoFoot">
+            <img src="images/logo2new.png" style="max-width: 200px;"/>
+          </div>
           <p class="text">
             "Welcome to Muslim Guider, your go-to app for all things Islamic.
             Here, you'll find Hadiths, which are wise sayings from the Prophet
@@ -82,7 +84,6 @@
             <p><a href="#">Hadith</a></p>
             <p><a href="#">About Us</a></p>
           </div>
-
         </div>
 
         <div class="footer-col">
@@ -94,7 +95,6 @@
             <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
             <p><a href="#">+60192829278 - Imran Bahar</a></p>
           </div>
-
         </div>
       </div>
     </section>
