--- a/hadithFinderBaru.html
+++ b/hadithFinderBaru.html
@@ -30,9 +30,9 @@
 
     <div class="top-content">
       <div class="left-top">
-        <h1>Mosque Locator</h1>
+        <h1>Hadith</h1>
       </div>
-      <div class="right-top1">
+      <div class="right-top">
         <h1><span id="time"></span></h1>
         <script src="js/time.js"></script>
       </div>
