nnti revert kalau rosak kat library

--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -83,7 +83,7 @@
 
         <div class="search-bar">
             <input type="text" placeholder="Enter your location..." id="search" class="searchInput" />
-            <button id="searchButton" class="searchbtn">Search</button>
+            <button id="searchButton" class="searchbtn" onclick="handleSearch()">Search</button>
         </div>
 
         <div class="bottomContent">
