--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -20,10 +20,9 @@
     <header style="margin-bottom: 0.5%">
       <div class="logo">
         <a href="Homepage.html">
-          <img class="logoStyle" src="images/logo2new.png" />
+          <img class="logoStyle" src="images/logo2new.png" alt="Logo" />
         </a>
       </div>
-
       <nav class="navbar">
         <a href="QiblaFinder.html">QIBLA FINDER</a>
         <a href="masjidLocator.html">MOSQUE LOCATOR</a>
@@ -55,7 +54,7 @@
         />
         <button id="searchButton" class="searchbtn">Search</button>
       </div>
-      <div id="map"></div>
+      <div id="map" class="map"></div>
       <table id="mosqueTable">
         <tbody></tbody>
       </table>
@@ -65,7 +64,7 @@
       <div class="footer-row">
         <div class="footer-col">
           <div class="logoFoot">
-            <img src="images/logo2new.png" style="max-width: 200px;"/>
+            <img src="images/logo2new.png" style="max-width: 200px" />
           </div>
           <p class="text">
             "Welcome to Muslim Guider, your go-to app for all things Islamic.
