--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -19,7 +19,7 @@
   <body>
     <header style="margin-bottom: 0.5%">
       <div class="logo">
-        <a href="Homepage.html">
+        <a href="index.html">
           <img class="logoStyle" src="images/logo2new.png" alt="Logo" />
         </a>
       </div>
@@ -89,10 +89,10 @@
           <h3>Contact</h3>
           <div class="links">
             <p><a href="#">MuslimGuider@gmail.com</a></p>
-            <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
+            <!-- <p><a href="#">+601120517289 - Ahmad Muaz</a></p> -->
             <p><a href="#">+60134143356 - Farid Izzuddin</a></p>
-            <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
-            <p><a href="#">+60192829278 - Imran Bahar</a></p>
+            <!-- <p><a href="#">+60179841826 - Tuan Firdaus</a></p> -->
+            <!-- <p><a href="#">+60192829278 - Imran Bahar</a></p> -->
           </div>
         </div>
       </div>
