--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -75,7 +75,7 @@
           </p>
         </div>
         <div class="footer-col">
-          <h3>Menu</h3>
+          <h3><strong>Menu</strong></h3>
           <div class="links">
             <p><a href="#">Qibla Finder</a></p>
             <p><a href="#">Mosque Locator</a></p>
@@ -86,20 +86,20 @@
         </div>
 
         <div class="footer-col">
-          <h3>Contact</h3>
+          <h3><strong>Contact</strong></h3>
           <div class="links">
             <p><a href="#">MuslimGuider@gmail.com</a></p>
-            <!-- <p><a href="#">+601120517289 - Ahmad Muaz</a></p> -->
+            <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
             <p><a href="#">+60134143356 - Farid Izzuddin</a></p>
-            <!-- <p><a href="#">+60179841826 - Tuan Firdaus</a></p> -->
-            <!-- <p><a href="#">+60192829278 - Imran Bahar</a></p> -->
+            <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
+            <p><a href="#">+60192829278 - Imran Bahar</a></p>
           </div>
         </div>
       </div>
     </section>
 
     <div class="copy">
-      <p>Copyright © 2024 Muslim Guider Co. All rights reserved.</p>
+      <p>© 2024 Muslim Guider Co. All rights reserved.</p>
     </div>
   </body>
 </html>
