--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -24,7 +24,7 @@
 
         <nav class="navbar">
             <a href="QiblaFinder.html">QIBLA FINDER</a>
-            <a href="masjidLocator.html">MASJID LOCATOR</a>
+            <a href="masjidLocator.html">MOSQUE LOCATOR</a>
             <a href="prayerTime.html">PRAY TIME</a>
             <a href="hadithFinderBaru.html">HADITH</a>
         </nav>
@@ -90,7 +90,7 @@
         <div class="footer-row">
             <div class="footer-col">
                 <div class="logoFoot">
-                    <img src="images/logo2new.png" style="max-width: 200px;" />
+                    <img src="images/logo2new.png" style="max-width: 200px; margin-left: 17%;" />
                 </div>
                 <p class="text">
                     "Welcome to Muslim Guider, your go-to app for all things Islamic.
