--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -42,8 +42,9 @@
         </div>
     </div>
 
-    <hr>
-
+    <div class="middle-content">
+        <hr style="margin-top: 0.7%; margin-bottom: 1%; margin-right: 0" />
+    </div>
 
 
     <div class="container">
