--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -64,7 +64,7 @@
       <div class="footer-row">
         <div class="footer-col">
           <div class="logoFoot">
-            <img src="images/logo2new.png" style="max-width: 200px" />
+            <img src="images/logo2new.png" style="width: 200px" />
           </div>
           <p class="text">
             "Welcome to Muslim Guider, your go-to app for all things Islamic.
