--- a/aboutUs.html
+++ b/aboutUs.html
@@ -32,7 +32,7 @@
     <!-- Clock -->
     <div class="top-content">
         <div class="left-top">
-            <h1>Mosque Locator</h1>
+            <h1>About Us</h1>
         </div>
         <div class="right-top1">
             <h1><span id="time"></span></h1>
@@ -45,7 +45,9 @@
 
 
 
+    <div class="container">
 
+    </div>
 
 
 
