--- a/hadithFinderBaru.html
+++ b/hadithFinderBaru.html
@@ -25,6 +25,8 @@
         <a href="masjidLocator.html">MOSQUE LOCATOR</a>
         <a href="prayerTime.html">PRAY TIME</a>
         <a href="hadithFinderBaru.html">HADITH</a>
+        <a href="aboutUs.html">ABOUT US</a>
+
       </nav>
     </header>
 
